chore: adiciona validacao e resolve conflitos